--- a/flask_app/static/style/style.css
+++ b/flask_app/static/style/style.css
@@ -76,7 +76,7 @@ body::-webkit-scrollbar
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 8px 16px;
+    padding: 16px;
 }
 
 .navBar-bg {
@@ -102,6 +102,68 @@ body::-webkit-scrollbar
     color: var(--link-hover-color) !important;
 }
 
+.navBar .menu-btn {
+    display: none;
+}
+
+.navBar .hamburgerContainer {
+    cursor: pointer;
+    display: inline-block;
+}
+.hamburgerContainer .menu-btn-label {
+    cursor: pointer;
+    user-select: none;
+    position: relative;
+}
+
+.hamburgerContainer .menu-btn-label .hamburger {
+    display: block;
+    position: relative;
+    width: 1.5rem;
+    height: 3px;
+    background-color: var(--off-white-color);
+    transition: background-color 0.2s ease-out;
+}
+
+.hamburgerContainer .menu-btn-label .hamburger::before,
+.hamburgerContainer .menu-btn-label .hamburger::after {
+    content: "";
+    display: block;
+    height: 100%;
+    width: 100%;
+    background-color: var(--off-white-color);
+    position: absolute;
+    transition: all 0.2s ease-out;
+}
+
+.hamburgerContainer .menu-btn-label .hamburger::before {
+    top: 0.5rem;
+}
+
+.hamburgerContainer .menu-btn-label .hamburger::after {
+    top: -0.5rem;
+}
+
+
+
+.hamburgerContainer .menu-btn:checked + .menu-btn-label .hamburger::before {
+    transform: rotate(-45deg);
+}
+
+.hamburgerContainer .menu-btn:checked + .menu-btn-label .hamburger::after {
+    transform: rotate(45deg);
+}
+
+.hamburgerContainer .menu-btn:checked + .menu-btn-label .hamburger {
+    background-color: transparent;
+}
+
+.hamburgerContainer .menu-btn:checked + .menu-btn-label .hamburger::before,
+.hamburgerContainer .menu-btn:checked + .menu-btn-label .hamburger::after {
+    top: 0;
+}
+
+
 .navBar i:hover
 {
     color: var(--lilac-color);
@@ -117,6 +179,7 @@ body::-webkit-scrollbar
     background: var(--off-white-color);
     color: var(--black-color);
     overflow: hidden;
+    /* border: 1px solid var(--active-feature-background); */
 }
 
 .navDisplay ul {
@@ -216,6 +279,7 @@ body::-webkit-scrollbar
   position: absolute;
   right: 15px;
   border-radius: 15px;
+  border: 1px solid var(--active-feature-background);
 }
 
 .gearDropdown .gearRow {
@@ -223,9 +287,10 @@ body::-webkit-scrollbar
   align-items: center;
 }
 
-.gearRow img,
+.gearRow i, img,
 p {
   margin-right: 10px;
+  color: var(--dull-black);
 }
 
 .gearRow .notificationToggle {
@@ -242,6 +307,7 @@ p {
   width: 50%;
   height: 100%;
   border-radius: 100px;
+  transition: all var(--transition-duration) var(--transition-cubic-bezier);
   /* background-color: var(--lilac-color); */
 }
 
@@ -406,7 +472,7 @@ a:active
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 16px;
+        padding: 20px;
         position: absolute;
         top: 0;
         left: 0;
@@ -496,6 +562,7 @@ a:active
     .nav .nav-link {
         display: block;
         position: relative;
+        padding: 5px;
     }
 
     .nav .nav-link::before {
@@ -518,6 +585,18 @@ a:active
         width: 300px;
         top: 80px;
     }
+
+    
+
+    .gearDropdown {
+    font-size: var(--font-size-m);
+    width: 320px;
+  }
+
+  .gearRow .notificationToggle {
+    width: 60px;
+    height: 30px;
+  }
 
     .heroImage
     {
@@ -587,8 +666,8 @@ a:active
         gap: 60px;
         position: absolute;
         z-index: 3;
-        padding-inline: 80px;
-        padding-block: 16px;
+        /* padding-inline: 80px;
+        padding-block: 20px; */
     }
 
     .l-screen h1 > a 
