--- a/flask_app/templates/features.html
+++ b/flask_app/templates/features.html
@@ -44,7 +44,7 @@
       </div>
     </div>
   </section>
-  <section>
+  <section class="featuresSection">
     <div class="features">
       <div class="ghostWrittingFeature featureSection">
         <div class="ghostWritting">
@@ -141,11 +141,12 @@
             <div class="userInput">
               <div class="upload">
                 <form action="">
-                  <label for="upload">
-                    <img src="../static/images/icons/upload.svg" alt="" />
+                  <label for="fileUpload">
+                    <!-- <img src="../static/images/icons/upload.svg" alt="" /> -->
+                    <i class="fa-solid fa-upload"></i>
                     <p>Upload Your Articles</p>
                   </label>
-                  <input type="file" />
+                  <input type="file" name="fileUpload" id="fileUpload" />
                 </form>
               </div>
               <div class="textInput">
@@ -341,7 +342,7 @@
           <div class="language">
             <div id="raLanguageDisplay" class="languageDisplay">
               <p id="raLangDisplay" class="langDisplay">English</p>
-              <img rac="../static/images/icons/downArrow.svg" alt="" />
+              <img src="../static/images/icons/downArrow.svg" alt="" />
             </div>
             <div id="raLanguages" class="languages">
               <p class="lang raLang">English</p>
@@ -351,16 +352,18 @@
           </div>
           <div class="reaserchAnalysis">
             <form action="">
-              <label for="reasearchAnalysisFeature"
-                ><img
+              <label for="reasearchAnalysisFeature">
+                <!-- <img
                   src="../static/images/icons/upload.svg"
                   alt="A svg upload icon"
-                />Click here to upload document</label
+                /> -->
+                <i class="fa-solid fa-upload"></i>
+                Click here to upload document</label
               >
               <input
                 type="file"
                 name="reasearchAnalysisFeature"
-                id="ReasearchAnalysis"
+                id="reasearchAnalysisFeature"
               />
             </form>
           </div>
@@ -383,10 +386,16 @@
             <div class="paraphraseToogle">Paraphrasing</div>
             <div class="summaryToggle">Summarizing</div>
             <div class="psUpload">
-              <img
-                src="../static/images/icons/upload.svg"
-                alt="A svg upload icon"
-              />
+              <form action="">
+                <label for="uploadFile">
+                  <!-- <img
+                    src="../static/images/icons/upload.svg"
+                    alt="A svg upload icon"
+                /> -->
+                  <i class="fa-solid fa-upload"></i>
+                </label>
+                <input type="file" name="uploadFile" id="uploadFile" />
+              </form>
             </div>
           </div>
         </div>
@@ -416,16 +425,20 @@
           <div class="srOutputContainer">
             <div class="srOutput"></div>
             <div class="srOutputTools">
-              <span
-                ><img
+              <span>
+                <!-- <img
                   src="../static/images/icons/download.svg"
                   alt="A svg download icon"
-              /></span>
-              <span
-                ><img
+              /> -->
+                <i class="fa fa-download" aria-hidden="true"></i>
+              </span>
+              <span>
+                <!-- <img
                   src="../static/images/icons/copy.svg"
                   alt="A svg copy icon"
-              /></span>
+              /> -->
+                <i class="fa-solid fa-copy"></i>
+              </span>
             </div>
           </div>
         </div>
@@ -458,5 +471,4 @@
   </section>
 </div>
 <script src="../static/scripts/features.js"></script>
-<script src="../static/scripts/script.js"></script>
 {% endblock body %}
