Modifying structure for the layout page

--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -48,7 +48,17 @@
           {% else %}
           <h1><a href="/">Lytrally</a></h1>
           {% endif %}
-          <i id="openNav" class="fa-solid fa-bars navBarChange"></i>
+          <!-- <i id="openNav" class="fa-solid fa-bars navBarChange"></i> -->
+          <div class="hamburgerContainer">
+            <input
+              class="menu-btn"
+              type="checkbox"
+              name="hamburger"
+              id="hamburger"
+            /><label class="menu-btn-label" for="hamburger"
+              ><span class="hamburger"></span
+            ></label>
+          </div>
         </div>
         <div class="navDisplay">
           <ul>
@@ -61,11 +71,12 @@
             <li><a id="signUp" class="navA" href="/signup">Sign Up</a></li>
             {% elif page == "account" %}
             <li>
-              <img
+              <!-- <img
                 class="gear navA"
                 src="../static/images/icons/gear.svg"
                 alt="A svg gear icon"
-              />
+              /> -->
+              <i class="fa-solid fa-gear gear navA"></i>
             </li>
             {% else %}
             <li><a id="signIn" class="navA" href="/signin">Sign In</a></li>
@@ -116,7 +127,9 @@
           <ul class="nav">
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Service</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Us</a>
+            </li>
             <!-- <button><a class="nav-link" href="../templates/signup.html">Sign Up</a></button> -->
             {% if page == "signin" %}
             <li class="nav-item">
@@ -124,11 +137,12 @@
             </li>
             {% elif page == "account" or page == "features" %}
             <li class="nav-item">
-              <img
+              <!-- <img
                 class="gear lsGear"
                 src="../static/images/icons/gear.svg"
                 alt="A svg gear icon"
-              />
+              /> -->
+              <i class="fa-solid fa-gear gear lsGear"></i>
             </li>
             {% else %}
             <li class="nav-item">
@@ -139,12 +153,15 @@
         </div>
         <div class="gearDropdown lsGearDropdown">
           <div class="gearRow">
-            <img
+            <!-- <img
               src="../static/images/icons/notification.svg"
               alt="A svg icon of a bell, a notification icon"
-            />
+            /> -->
+            <i class="fa-solid fa-bell"></i>
             <p>Notification</p>
-            <div class="notificationToggle lsNotificationToggle toogleContainerOn">
+            <div
+              class="notificationToggle lsNotificationToggle toogleContainerOn"
+            >
               <div class="toggle lsToggle toggleOn"></div>
             </div>
           </div>
@@ -177,19 +194,27 @@
       <div class="s-screen">
         <div class="navBar">
           <h1><a href="/">Lytrally</a></h1>
-          <i id="openNav" class="fa-solid fa-bars"></i>
+          <!-- <i id="openNav" class="fa-solid fa-bars"></i> -->
+          <div class="hamburgerContainer">
+            <input
+              class="menu-btn"
+              type="checkbox"
+              name="hamburger"
+              id="hamburger"
+            /><label class="menu-btn-label" for="hamburger"
+              ><span class="hamburger"></span
+            ></label>
+          </div>
         </div>
         <div class="navDisplay">
-          <li><a class="navA" href="#">Home</a></li>
-          <li><a class="navA" href="#">Service</a></li>
-          <li><a class="navA" href="#">Contact Us</a></li>
-          <li><a class="navA" href="#">About</a></li>
-          <!-- <a class="navA" href="{{ url_for('signup') }}">Sign Up</a> -->
-          {% if page == "signin" %}
-          <li><a id="signUp" class="navA" href="/signup">Sign Up</a></li>
-          {% else %}
-          <li><a id="signIn" class="navA" href="/signin">Sign In</a></li>
-          {% endif %}
+          <ul>
+            <li><a class="navA" href="#">Home</a></li>
+            <li><a class="navA" href="#">Service</a></li>
+            <li><a class="navA" href="#">Contact Us</a></li>
+            <li><a class="navA" href="#">About</a></li>
+            <!-- <a class="navA" href="{{ url_for('signup') }}">Sign Up</a> -->
+            <li><a id="signIn" class="navA" href="/signin">Sign In</a></li>
+          </ul>
         </div>
       </div>
       <div class="l-screen">
@@ -198,7 +223,9 @@
           <ul class="nav">
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Service</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Us</a>
+            </li>
             <!-- <button><a class="nav-link" href="../templates/signup.html">Sign Up</a></button> -->
             <li class="nav-item">
               <button><a class="nav-link" href="/signin">Sign In</a></button>
@@ -208,6 +235,8 @@
       </div>
     </nav>
     {% endif %}
+    <!-- The script below includes script for the navbar -->
+    <script src="../static/scripts/script.js"></script>
     <!-- Between the code-blocks below, all unique code (for the body block) for each webpage will be inserted -->
     {% block body %}{% endblock body %}
 
@@ -228,8 +257,5 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-
-    <!-- The script below includes script for the navbar -->
-    <script src="../static/scripts/script.js"></script>
   </body>
 </html>
