--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -2,11 +2,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Flash messages for notifications -->
-    {% with messages = get_flashed_messages(with_categories=true) %} {% if
-    messages %} {% for category, message in messages %}
-    <div class="alert alert-{{ category }}">{{ message }}</div>
-    {% endfor %} {% endif %} {% endwith %}
     <!-- Between the code-blocks below, all unique code (for the head block) for each webpage will be inserted -->
     {% block head %}{% endblock head %}
     <meta charset="UTF-8" />
@@ -238,7 +233,22 @@
     <!-- The script below includes script for the navbar -->
     <script src="../static/scripts/script.js"></script>
     <!-- Between the code-blocks below, all unique code (for the body block) for each webpage will be inserted -->
-    {% block body %}{% endblock body %}
+    <!-- Flash messages for notifications -->
+    {% with messages = get_flashed_messages(with_categories=true) %} {% if
+    messages %} {% for category, message in messages %}
+    <div
+      class="alert alert-{{ category }} alert-dismissible fade show"
+      role="alert"
+    >
+      {{ message }}
+      <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="alert"
+        aria-label="Close"
+      ></button>
+    </div>
+    {% endfor %} {% endif %} {% endwith %} {% block body %}{% endblock body %}
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
