--- a/flask_app/templates/features.html
+++ b/flask_app/templates/features.html
@@ -26,6 +26,7 @@
           <li><a class="navA" href="#">Edit</a></li>
           <li><a class="navA" href="#">Tools Us</a></li>
           <li><a class="navA" href="#">Help</a></li>
+          <li><a class="navA" href="#">Share</a></li>
         </ul>
       </div>
       <div class="logoHeader">
@@ -48,6 +49,7 @@
             <a class="nav-link" href="#">Tools</a>
           </li>
           <li class="nav-item"><a class="nav-link" href="#">Help</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Share</a></li>
         </ul>
       </div>
       <div class="logoHeader">
